--- a/ProjectManagementMain/admin-page/admin-verify-attachments.html
+++ b/ProjectManagementMain/admin-page/admin-verify-attachments.html
@@ -164,6 +164,7 @@
                 <th>School</th>
                 <th>Program</th>
                 <th>Status</th>
+                <th>Message</th> 
                 <th>Action</th>
               </tr>
             </thead>
@@ -191,100 +192,58 @@
     </main>
 
     <div
-      class="modal fade"
-      id="viewContentModel"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-xl">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">
-              Verify Attachment
-            </h1>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <div
-              id="carouselExampleIndicators"
-              class="carousel slide admin-photo-verify"
-            >
-              <div class="carousel-indicators">
-                <button
-                  type="button"
-                  data-bs-target="#carouselExampleIndicators"
-                  data-bs-slide-to="0"
-                  class="active"
-                  aria-current="true"
-                  aria-label="Slide 1"
-                ></button>
-                <button
-                  type="button"
-                  data-bs-target="#carouselExampleIndicators"
-                  data-bs-slide-to="1"
-                  aria-label="Slide 2"
-                ></button>
-                <button
-                  type="button"
-                  data-bs-target="#carouselExampleIndicators"
-                  data-bs-slide-to="2"
-                  aria-label="Slide 3"
-                ></button>
-              </div>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img
-                    src="../image-source/Document 140_2.jpg"
-                    class="d-block w-100"
-                    alt="..."
-                  />
-                </div>
-
-              </div>
-              <button
-                class="carousel-control-prev"
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="prev"
-              >
-                <span
-                  class="carousel-control-prev-icon"
-                  aria-hidden="true"
-                ></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button
-                class="carousel-control-next"
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="next"
-              >
-                <span
-                  class="carousel-control-next-icon"
-                  aria-hidden="true"
-                ></span>
-                <span class="visually-hidden">Next</span>
-              </button>
+    class="modal fade"
+    id="viewContentModel"
+    tabindex="-1"
+    aria-labelledby="exampleModalLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">
+            Verify Attachment
+          </h1>
+        </div>
+        <!-- Content -->
+        <div class="modal-body">
+          <!-- Grades Section -->
+          <div class="mb-4">
+            <h2>Grades</h2>
+            <!-- Add content for Grades here -->
+            <div class="grades-item">
+              <div class="grades-image">
+                <!-- Add image for Grades -->
+                <img src="path_to_grades_image.jpg" alt="Grades Image" />
+                <p>Score Grade: A</p>
+                <p>GWA: 3.8</p>
             </div>
           </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Close
-            </button>
+          <!-- Rendered Service Section -->
+          <div class="mb-4">
+            <h2>Rendered Service</h2>
+            <!-- Add content for Rendered Service here -->
+            <div class="rendered-service-image">
+              <!-- Add image for Rendered Service -->
+              <img src="path_to_rendered_service_image.jpg" alt="Rendered Service Image" />
+            </div>
+            <!-- Replace this with your actual content -->
           </div>
+        </div>
+        <div class="modal-footer">
+          <button
+            type="button"
+            class="btn btn-secondary"
+            data-bs-dismiss="modal"
+          >
+            Close
+          </button>
         </div>
       </div>
     </div>
+  </div>
+  
+  
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -335,25 +294,35 @@
             // Populate table rows dynamically
             const row = document.createElement('tr');
             row.innerHTML = `
-              <td>${data.firstname} ${data.middlename} ${data.lastname}</td>
-              <td>${data.school}</td>
-              <td>${data.program}</td>
-              <td>
-                <select class="form-select status-dropdown" data-uid="${childSnapshot.key}">
-                  <option value="Active" ${data.status === 'Active' ? 'selected' : ''}>Active</option>
-                  <option value="Inactive" ${data.status === 'Inactive' ? 'selected' : ''}>Inactive</option>
-                </select>
-              </td>
-              <td>
-                <button
-                  type="button"
-                  class="btn btn-primary admin-verify-button"
-                  data-bs-toggle="modal"
-                  data-bs-target="#viewContentModel"
-                >
-                  Verify
-                </button>
-              </td>
+            <td>${data.firstname} ${data.middlename} ${data.lastname}</td>
+            <td>${data.school}</td>
+            <td>${data.program}</td>
+            <td>
+              <select class="form-select status-dropdown" data-uid="${childSnapshot.key}">
+                <option value="Active" ${data.status === 'Active' ? 'selected' : ''}>Active</option>
+                <option value="Inactive" ${data.status === 'Inactive' ? 'selected' : ''}>Inactive</option>
+              </select>
+            </td>
+            <td>
+              <button
+                type="button"
+                class="btn btn-primary admin-verify-button"
+                data-bs-toggle="modal"
+                data-bs-target="#viewContentModel"
+              >
+                Message
+              </button>
+            </td>
+            <td>
+              <button
+                type="button"
+                class="btn btn-primary admin-verify-button"
+                data-bs-toggle="modal"
+                data-bs-target="#viewContentModel"
+              >
+                Verify
+              </button>
+            </td>
             `;
             tableBody.appendChild(row);
 
