--- a/admin-page/admin-verify-attachments.html
+++ b/admin-page/admin-verify-attachments.html
@@ -174,21 +174,7 @@
         </div>
       </div>
 
-      <div class="row" style="margin-left: 10px">
-        <button
-          type="button"
-          class="btn btn-outline-primary admin-print-button1"
-          style="margin-right: 15px; margin-bottom: 5px"
-        >
-          <i class="bx bx-printer"></i> Print all Scholar List
-        </button>
-        <button
-          type="button"
-          class="btn btn-outline-primary admin-print-button2"
-        >
-          <i class="bx bx-printer"></i> Print all Passed List
-        </button>
-      </div>
+    
     </main>
 
    <!-- Add this style block inside the <head> tag of your HTML -->
@@ -322,6 +308,7 @@
         const storage = getStorage(app);
 
         document.addEventListener("DOMContentLoaded", function () {
+          let alertShown = false;
             const tableBody = document.getElementById('tableBody');
 
             // Fetch data from Firebase collection (assuming 'users' is your collection)
@@ -409,39 +396,40 @@
                           const gwaSnapshot = await get(gwaRef);
                           const gwaValue = gwaSnapshot.val();
                           const formattedGWA = gwaValue ? parseFloat(gwaValue).toFixed(2) : '';
-                          
-                          // Update the displayed GWA value in the modal
-                          gwaValueElement.textContent = gwaValue || ''; // Set the GWA value or an empty string if not available
+
+                          gwaValueElement.textContent = gwaValue || '';
                           gwaValueElement.textContent = formattedGWA;
                           gradesImage.src = gradesImageURL;
                           renderedServiceImage.src = renderedServiceImageURL;
 
-                          // Show the modal after updating the images
-                          // const bsModal = new bootstrap.Modal(modalContent);
-                          // bsModal.show();
+                          verifiedButton.addEventListener('click', async () => {
+                            const newStatus = "Passed"; // Fixed typo in status string
+                            try {
+                              await set(dbRef(database, `users/${userId}/status`), newStatus);
+                              if (!alertShown) {
+                                alert(`Status updated to "${newStatus}"`);
+                                alertShown = true; // Set the flag to true after the alert is shown
+                              }
+                            } catch (error) {
+                              alert(`Error updating status to "${newStatus}":`, error);
+                            }
+                          });
+
+                          failedButton.addEventListener('click', async () => {
+                            const newStatus = "Failed";
+                            try {
+                            await set(dbRef(database, `users/${userId}/status`), newStatus);
+                            if (!alertShown) {
+                              alert(`Status updated to "${newStatus}"`);
+                              alertShown = true; // Set the flag to true after the alert is shown
+                            }
+                          } catch (error) {
+                            alert(`Error updating status to "${newStatus}":`, error);
+                          }
+                          });
                         } catch (error) {
                           console.error('Error fetching scholar information:', error);
-                          // Log the error and handle it accordingly
                         }
-                        verifiedButton.addEventListener('click', async () => {
-                          try {
-                            // Update the status to 'passed' in the Firebase database
-                            await set(child(dbRef(database, `Users/${userId}/status`)), 'passed');
-                            console.log('Status updated to "passed"');
-                          } catch (error) {
-                            console.error('Error updating status to "passed":', error);
-                          }
-                        });
-
-                        failedButton.addEventListener('click', async () => {
-                          try {
-                            // Update the status to 'failed' in the Firebase database
-                            await set(child(dbRef(database, `Users/${userId}/status`)), 'failed');
-                            console.log('Status updated to "failed"');
-                          } catch (error) {
-                            console.error('Error updating status to "failed":', error);
-                          }
-                        });
 
                       });
                     });
