Oks na ang connect admin tas checked napud other files

--- a/admin-page/admin-browse-service.html
+++ b/admin-page/admin-browse-service.html
@@ -75,19 +75,13 @@
           <li class="list">
             <a href="admin-notifications.html" class="nav-link">
               <i class="bx bx-notification icon"></i>
-              <span class="link">Notifications</span>
+              <span class="link">Announcements</span>
             </a>
           </li>
           <li class="list">
             <a href="admin-browse-service.html" class="nav-link">
               <i class="bx bx-category icon"></i>
               <span class="link">Browse Service</span>
-            </a>
-          </li>
-          <li class="list">
-            <a href="admin-connect-admin.html" class="nav-link">
-              <i class="bx bx-message-edit icon"></i>
-              <span class="link">Connect Admin</span>
             </a>
           </li>
           <li class="list">
