--- a/admin-page/admin-dashboard-main.html
+++ b/admin-page/admin-dashboard-main.html
@@ -79,7 +79,7 @@
           <li class="list">
             <a href="admin-notifications.html" class="nav-link">
               <i class="bx bx-notification icon"></i>
-              <span class="link">Notifications</span>
+              <span class="link">Announcements</span>
             </a>
           </li>
           <li class="list">
@@ -88,12 +88,7 @@
               <span class="link">Browse Service</span>
             </a>
           </li>
-          <li class="list">
-            <a href="../admin-page/admin-connect-admin.html" class="nav-link">
-              <i class="bx bx-message-edit icon"></i>
-              <span class="link">Connect Admin</span>
-            </a>
-          </li>
+
           <li class="list">
             <a href="admin-verify-attachments.html" class="nav-link">
               <i class="bx bxs-select-multiple icon"></i>
@@ -206,7 +201,7 @@
         <div class="col-xl-4 col-md-6">
           <div class="card mb-4" style="background-color: #ffb703">
             <div class="card-body text-white">
-              Notifications
+              Announcements
               <i class="bx bx-notification icon-in"></i>
             </div>
             <div
