--- a/user-page/user-notification.html
+++ b/user-page/user-notification.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../style-sheets/user-main-page.css" />
     <link rel="icon" href="../image-source/set-web-icon.png" />
 
-    <title>COIS - Notifications</title>
+    <title>COIS - Announcements</title>
   </head>
   <body>
     <nav class="navbar">
@@ -116,7 +116,7 @@
 
 
     <main class="mt-5 pt-3">
-      <p class="user-page-title">Notifications</p>
+      <p class="user-page-title">Announcements</p>
 
       <nav aria-label="breadcrumb" style="margin-left: 10px">
         <ol class="breadcrumb">
@@ -124,7 +124,7 @@
             <a href="admin-dashboard-main.html">Dashboard</a>
           </li>
           <li class="breadcrumb-item active" aria-current="page">
-            Notifications
+            Announcements
           </li>
         </ol>
       </nav>
