--- a/user-page/user-dashboard-main.html
+++ b/user-page/user-dashboard-main.html
@@ -220,7 +220,7 @@
         <div class="col-xl-3 col-md-6">
           <div class="card mb-4" style="background-color: #ffb703">
             <div class="card-body text-white">
-              Notifications
+              Announcements
               <i class="bx bx-notification icon-in"></i>
             </div>
             <div
