--- a/user-page/user-download.html
+++ b/user-page/user-download.html
@@ -75,7 +75,7 @@
           <li class="list">
             <a class="nav-link" id="notificationLink">
               <i class="bx bx-notification icon"></i>
-              <span class="link">Notifications</span>
+              <span class="link">Announcements</span>
             </a>
           </li>
           <li class="list">
