--- a/user-page/user-dashboard-main.html
+++ b/user-page/user-dashboard-main.html
@@ -46,7 +46,7 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" id="scholarstatuslink">Scholar Status</a>
+              <a class="dropdown-item" id="ScholarStatuslink3">Scholar Status</a>
             </li>
             <li>
               <a class="dropdown-item" href="../home-page-user.html?${userId}">Logout</a>
@@ -337,6 +337,7 @@
       var ScholarStatuslink = document.getElementById('ScholarStatuslink');
       var ScholarStatuslink1 = document.getElementById('ScholarStatuslink1');
       var ScholarStatuslink2 = document.getElementById('ScholarStatuslink2');
+      var ScholarStatuslink3 = document.getElementById('ScholarStatuslink3');
       var BrowseServicelink = document.getElementById('BrowseServicelink');
       var ConnectAdminlink = document.getElementById('ConnectAdminlink');
       var ConnectAdminlink1 = document.getElementById('ConnectAdminlink1');
@@ -351,6 +352,7 @@
         ScholarStatuslink.href = "user-scholar-status.html?uid=" + userId;
         ScholarStatuslink1.href = "user-scholar-status.html?uid=" + userId;
         ScholarStatuslink2.href = "user-scholar-status.html?uid=" + userId;
+        ScholarStatuslink3.href = "user-scholar-status.html?uid=" + userId;
       
       if (userId && notificationLink) {
         notificationLink.href = 'user-notification.html?uid=' + userId;
