--- a/user-page/user-scholar-status.html
+++ b/user-page/user-scholar-status.html
@@ -115,9 +115,10 @@
                   if (fullNameSpan) {
                     fullNameSpan.textContent = fullName;
                   }
-                  if (yearLevelSpan && yearLevelSpan2) {
-                    yearLevelSpan2.textContent = yearLevelSpan.textContent =
-                      yearLevel;
+                  if (yearLevelSpan && yearLevelSpan2 ) {
+                    yearLevelSpan2.textContent = yearLevelSpan.textContent =yearLevel;
+                    yearLevelSpan.textContent = yearLevelSpan.textContent =yearLevel;
+                      
                   }
                   if (programSpan1 && programSpan2) {
                     programSpan1.textContent = programSpan2.textContent = program;
@@ -335,7 +336,7 @@
         </ul>
         <div class="bottom-content">
           <li class="list-bottom">
-            <a href="../index.html?${userId}" class="nav-link">
+            <a href="../home-page-user.html" class="nav-link">
               <i class="bx bx-log-out icon"></i>
               <span class="link">Logout</span>
             </a>
