--- a/admin-page/admin-dashboard-main.html
+++ b/admin-page/admin-dashboard-main.html
@@ -51,7 +51,7 @@
               >
             </li>
             <li>
-              <a class="dropdown-item" href="../home-page-user.html">Logout</a>
+              <a class="dropdown-item" href="../index.html">Logout</a>
             </li>
           </ul>
         </div>
@@ -79,7 +79,7 @@
           <li class="list">
             <a href="admin-notifications.html" class="nav-link">
               <i class="bx bx-notification icon"></i>
-              <span class="link">Announcements</span>
+              <span class="link">Notifications</span>
             </a>
           </li>
           <li class="list">
@@ -98,7 +98,7 @@
         </ul>
         <div class="bottom-content">
           <li class="list-bottom">
-            <a href="../home-page-user.html" class="nav-link">
+            <a href="../index.html" class="nav-link">
               <i class="bx bx-log-out icon"></i>
               <span class="link">Logout</span>
             </a>
@@ -177,7 +177,29 @@
             >
           </div>
         </div>
-       
+        <div
+          class="card text-center mb-4 admin-dashboard-card1"
+          style="max-width: 16rem; margin-right: 18px"
+        >
+          <div class="card-body">
+            <h5 class="card-title dataToday" style="font-weight: bold">
+              CIOS-ADMIN
+            </h5>
+            <i class="bx bx-spreadsheet admin-dashboard-icon1"></i>
+            <p
+              class="card-text dateToday"
+              style="font-size: 35px; margin-top: 5px"
+            >
+              <span id="currentDate"></span>
+            </p>
+            <p
+              class="card-text timeToday"
+              style="font-size: 25px; margin-top: 2px"
+            >
+              <span id="currentTime"></span>
+            </p>
+          </div>
+        </div>
       </div>
 
       <div class="row">
@@ -250,5 +272,42 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+
+    <script>
+      // Function to update real-time date and time
+      function updateDateTime() {
+        var currentDate = new Date();
+        var day = currentDate.getDate();
+        var month = currentDate.getMonth() + 1; // Months are zero-based
+        var year = currentDate.getFullYear();
+
+        // Add leading zero if needed
+        day = (day < 10 ? "0" : "") + day;
+        month = (month < 10 ? "0" : "") + month;
+
+        var formattedDate = month + "-" + day + "-" + year;
+
+        var hours = currentDate.getHours();
+        var minutes = currentDate.getMinutes();
+        var seconds = currentDate.getSeconds();
+
+        // Add leading zero if needed
+        hours = (hours < 10 ? "0" : "") + hours;
+        minutes = (minutes < 10 ? "0" : "") + minutes;
+        seconds = (seconds < 10 ? "0" : "") + seconds;
+
+        var formattedTime = hours + ":" + minutes + ":" + seconds;
+
+        // Update the content
+        document.getElementById("currentDate").innerText = formattedDate;
+        document.getElementById("currentTime").innerText = formattedTime;
+
+        // Update every second
+        setTimeout(updateDateTime, 1000);
+      }
+
+      // Call the function to initiate the update
+      updateDateTime();
+    </script>
   </body>
 </html>
