--- a/index.html
+++ b/index.html
@@ -22,19 +22,20 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="../style-sheets/home-page-user.css" />
+    <link rel="stylesheet" href="style-sheets/login-page-user.css" />
+    <link rel="icon" href="image-source/set-web-icon.png" />
   </head>
   <body>
     <section class="side-part-content">
-      <img src="../image-source/icon-brand.svg" alt="" />
+      <img src="image-source/icon-brand.svg" alt="" />
     </section>
 
     <section class="main">
       <div class="user-login-container">
         <section class="logo-source">
-          <img src="../image-source/logo-source-a.svg" alt="" />
+          <img src="image-source/logo-source-a.svg" alt="" />
         </section>
-        <p class="title">Admin Access</p>
+        <p class="title">Scholar Access</p>
         <div class="separator"></div>
         <p class="welcome-message">Login to your Account</p>
 
@@ -54,10 +55,14 @@
             <i class="fas fa-lock"></i>
           </div>
 
-          <button class="submit" type="submit">Login</button>
+          <button class="submit" type="submit" id="userSubmit-button">
+            Login
+          </button>
         </form>
 
-        <a href="../index.html"><p class="admin-link">Scholar Here</p></a>
+        <a href="/admin-page/home-page-admin.html"
+          ><p class="admin-link">Administrator Here</p></a
+        >
       </div>
     </section>
 
@@ -99,6 +104,12 @@
     </div>
 
     <div></div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/10.7.1/firebase-app-compat.js"></script>
     <!-- include only the Firebase features as you need -->
@@ -138,16 +149,29 @@
     -->
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
+    <script type="module">
+      // Import the necessary Firebase functions
 
-    <script>
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
+      import {
+        getAuth,
+        signInWithEmailAndPassword,
+      } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js";
+
+      // Initialize Firebase
+      const firebaseConfig = {
+        apiKey: "AIzaSyAXTWA8tDgh36kHxr3oiI2mdZk4xN1ExIU",
+        authDomain: "coisprojectmain.firebaseapp.com",
+        projectId: "coisprojectmain",
+        storageBucket: "coisprojectmain.appspot.com",
+        messagingSenderId: "666040501925",
+        appId: "1:666040501925:web:a53d190dbffca2ceac2f4c",
+      };
+
+      const app = initializeApp(firebaseConfig);
+      const auth = getAuth(app);
+
       document.addEventListener("DOMContentLoaded", function () {
-        const userEmail = "admin@company.com";
-        const userPassword = "password";
         const loginForm = document.getElementById("loginForm");
 
         loginForm.addEventListener("submit", function (event) {
@@ -156,17 +180,31 @@
           const enteredEmail = document.getElementById("userEmail").value;
           const enteredPassword = document.getElementById("userPassword").value;
 
-          if (enteredEmail === userEmail && enteredPassword === userPassword) {
-            window.location.href = "admin-dashboard-main.html";
-          } else {
-            // Show the Bootstrap modal for invalid credentials
-            const modal = new bootstrap.Modal(
-              document.getElementById("exampleModal")
-            );
-            modal.show();
-          }
+          signInWithEmailAndPassword(auth, enteredEmail, enteredPassword)
+            .then((userCredential) => {
+              // Extract the UID after successful login
+              const user = userCredential.user;
+              const userId = user.uid; // Get the UID
+
+              // Redirect to user-dashboard-main.html with the UID as a query parameter
+              window.location.href = `user-page/user-dashboard-main.html?uid=${userId}`;
+            })
+            .catch((error) => {
+              // Handle authentication errors
+              const errorCode = error.code;
+              const errorMessage = error.message;
+              console.error(errorMessage);
+
+              // Show the Bootstrap modal for invalid credentials
+              const modal = new bootstrap.Modal(
+                document.getElementById("exampleModal")
+              );
+              modal.show();
+            });
         });
       });
     </script>
+
+    <!-- <script src="/backend-scripts/user-login-page.js"></script> -->
   </body>
 </html>
