--- a/user-page/user-connect-admin.html
+++ b/user-page/user-connect-admin.html
@@ -45,7 +45,7 @@
               <a class="dropdown-item" id="ScholarStatuslink3">Scholar Status</a>
             </li>
             <li>
-              <a class="dropdown-item" href="../home-page-user.html">Logout</a>
+              <a class="dropdown-item" href="../index.html">Logout</a>
             </li>
           </ul>
         </div>
@@ -66,7 +66,7 @@
           </li>
           <li class="list">
             <a class="nav-link" id="ScholarStatuslink">
-              <i class="bx bxs-dashboard icon"></i>
+              <i class="bx bxs-user-account icon"></i>
               <span class="link">Scholar Status</span>
             </a>
           </li>
@@ -97,13 +97,13 @@
           <li class="list">
             <a  class="nav-link" id="DownlaodCSRlink">
               <i class="bx bxs-download icon"></i>
-              <span class="link">Downlaod CSR</span>
+              <span class="link">Download CSR</span>
             </a>
           </li>
         </ul>
         <div class="bottom-content">
           <li class="list-bottom">
-            <a href="../home-page-user.html?${userId}" class="nav-link">
+            <a href="../index.html?${userId}" class="nav-link">
               <i class="bx bx-log-out icon"></i>
               <span class="link">Logout</span>
             </a>
@@ -116,9 +116,7 @@
       <p class="user-page-title">Connect Admin</p>
       <nav aria-label="breadcrumb" style="margin-left: 10px">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item">
-            <a href="user-dashboard-main.html">Dashboard</a>
-          </li>
+          <li class="breadcrumb-item">Dashboard</li>
           <li class="breadcrumb-item active" aria-current="page">
             Connect Admin
           </li>
@@ -142,7 +140,7 @@
 
       <div class="card border-dark mb-3 userMessageContent" style="min-width: 18rem; margin-top: 20px; color: #0e2b63">
         <div class="card-header">Send Message Here</div>
-        <div id="messages"></div>
+        <div id="messages" style="max-height: 300px; overflow-y: auto"></div>
         <div id="sendMessage" class="message-content">
           <input type="text" id="msgTxt" class="msgContentPlace" placeholder="Send your message" onkeypress="handleKeyPress(event)" />
           <input type="submit" id="msgBtn" class="msgButtonStyle" value="send" onclick="module.sendMessage()" />
