--- a/user-page/user-download.html
+++ b/user-page/user-download.html
@@ -45,7 +45,7 @@
               <a class="dropdown-item" id="ScholarStatuslink3">Scholar Status</a>
             </li>
             <li>
-              <a class="dropdown-item" href="../home-page-user.html">Logout</a>
+              <a class="dropdown-item" href="../index.html">Logout</a>
             </li>
           </ul>
         </div>
@@ -66,14 +66,14 @@
           </li>
           <li class="list">
             <a class="nav-link" id="ScholarStatuslink">
-              <i class="bx bxs-dashboard icon"></i>
+              <i class="bx bxs-user-account icon"></i>
               <span class="link">Scholar Status</span>
             </a>
           </li>
           <li class="list">
             <a class="nav-link" id="notificationLink">
               <i class="bx bx-notification icon"></i>
-              <span class="link">Announcements</span>
+              <span class="link">Notifications</span>
             </a>
           </li>
           <li class="list">
@@ -97,13 +97,13 @@
           <li class="list">
             <a  class="nav-link" id="DownlaodCSRlink1">
               <i class="bx bxs-download icon"></i>
-              <span class="link">Downlaod CSR</span>
+              <span class="link">Download CSR</span>
             </a>
           </li>
         </ul>
         <div class="bottom-content">
           <li class="list-bottom">
-            <a href="../home-page-user.html?${userId}" class="nav-link">
+            <a href="../index.html" class="nav-link">
               <i class="bx bx-log-out icon"></i>
               <span class="link">Logout</span>
             </a>
@@ -166,6 +166,36 @@
             <i class="bx bxs-file"></i> Download CSR</a
           >
     </main>
+    
+
+     <!-- To display reminder that they cannot generate PDF -->
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+      <div
+        id="statusToastContainer"
+        class="toast"
+        role="alert"
+        aria-live="assertive"
+        aria-atomic="true"
+      >
+        <div class="toast-header">
+          <img
+            src="../image-source/OIS-logo.svg"
+            class="rounded me-2 reminderMessage"
+            alt="..."
+          />
+          <strong class="me-auto">City Scholarship Office</strong>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="toast"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="toast-body">
+          You cannot generate a document as you are in 'Inactive' status.
+        </div>
+      </div>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -435,7 +465,10 @@ function getUrlParameter(name) {
               generatePDF(); // Call your generatePDF function if status is "Passed"
             } else {
               // Display message to user that they cannot generate PDF because of failed status
-              alert("Sorry, you cannot generate the PDF because your status is 'Failed'.");
+              const statusToastContainer = new bootstrap.Toast(
+                document.getElementById("statusToastContainer")
+              );
+              statusToastContainer.show();
             }
           } catch (error) {
             console.error("Error fetching user status:", error);
