--- a/user-page/user-notification.html
+++ b/user-page/user-notification.html
@@ -311,17 +311,6 @@
         });
       });
 
-      document.addEventListener("DOMContentLoaded", function () {
-        const database = getDatabase(app);
-        const postsRef = ref(database, "postannouncements"); // Reference to the 'postannouncements' node in Firebase
-
-        // Fetch data from Firebase
-        onValue(postsRef, (snapshot) => {
-          const posts = snapshot.val(); // Retrieved posts from Firebase
-
-          // Get the container where you want to display the posts
-          const cardContainer = document.querySelector(".row-content");
-
           // Function to format text content with line breaks and clickable links
           function formatText(text) {
             const formattedText = text
@@ -336,9 +325,26 @@
 
             return formattedText;
           }
+          
+      document.addEventListener("DOMContentLoaded", function () {
+        const database = getDatabase(app);
+        const postsRef = ref(database, "postannouncements"); // Reference to the 'postannouncements' node in Firebase
+
+        // Fetch data from Firebase
+        onValue(postsRef, (snapshot) => {
+          const posts = snapshot.val(); // Retrieved posts from Firebase
+
+          // Get the container where you want to display the posts
+          const cardContainer = document.querySelector(".row-content");
+            // Get the keys and sort them in descending order
+            const keys = Object.keys(posts).sort((a, b) => {
+              const numA = parseInt(a.replace("ann", ""));
+              const numB = parseInt(b.replace("ann", ""));
+              return numB - numA;
+            });
 
           // Loop through the posts
-          for (const key in posts) {
+          keys.forEach((key) => {
             const postData = posts[key]; // Retrieve individual post data
 
             // Create HTML elements dynamically and populate them with fetched data
@@ -384,7 +390,7 @@
             } else {
               console.error("cardContainer is null or undefined.");
             }
-          }
+          });
 
           function postPicture(number) {
             console.log("post picture number", number);
